[package]
name = "tetris"
version = "0.0.1"
authors = ["Michael Quinn <mikejquinn@gmail.com>", "royalmustard <royalmustard@memium.de>"]
edition="2018"


[dependencies]
rand = "0.7.3"
termion = "1.5.5"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
dirs = "3.0.1"
thread-control= "0.1.2"
clap = "2.33.3"

[profile.release]
lto=true
